Add new abilities and update settings.json
Expanded `heroicAbilities.json` with 50+ new heroic abilities, enhancing gameplay mechanics and character customization. Added 15+ innate abilities to `innateAbilities.json` for diverse kin types, introducing unique traits and role-playing opportunities. Updated `settings.json` to include new terms in `cSpell.words` for improved spell-checking.

--- a/DragonbaneCharacterSheetGenerator/.vscode/settings.json
+++ b/DragonbaneCharacterSheetGenerator/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "cSpell.words": [
+        "DRAGONSLAYER",
         "Elementalism",
         "Farsight",
-        "Longstrider"
+        "Halfling",
+        "Karkion",
+        "leatherworking",
+        "Longstrider",
+        "rulebook",
+        "SPELLCASTER",
+        "Wolfkin"
     ]
 }
