--- a/DragonbaneCharacterSheetGenerator/.vscode/settings.json
+++ b/DragonbaneCharacterSheetGenerator/.vscode/settings.json
@@ -8,7 +8,9 @@
         "leatherworking",
         "Longstrider",
         "rulebook",
+        "Scrying",
         "SPELLCASTER",
+        "thunderstrike",
         "Wolfkin"
     ]
 }
