--- a/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
+++ b/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
@@ -1,69 +1,73 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-    <PropertyGroup>
-        <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
-        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
-        <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-        <!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
+ <PropertyGroup>
+ <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
+ <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
 
-        <!-- Note for MacCatalyst:
-            The default runtime is maccatalyst-x64, except in Release config, in which case the default is maccatalyst-x64;maccatalyst-arm64.
-            When specifying both architectures, use the plural <RuntimeIdentifiers> instead of the singular <RuntimeIdentifier>.
-            The Mac App Store will NOT accept apps with ONLY maccatalyst-arm64 indicated;
-            either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
-        <!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
+ <OutputType>Exe</OutputType>
+ <RootNamespace>DragonbaneCharacterSheetGenerator</RootNamespace>
+ <UseMaui>true</UseMaui>
+ <SingleProject>true</SingleProject>
+ <ImplicitUsings>enable</ImplicitUsings>
+ <EnableDefaultCssItems>false</EnableDefaultCssItems>
+ <Nullable>enable</Nullable>
 
-        <OutputType>Exe</OutputType>
-        <RootNamespace>DragonbaneCharacterSheetGenerator</RootNamespace>
-        <UseMaui>true</UseMaui>
-        <SingleProject>true</SingleProject>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <EnableDefaultCssItems>false</EnableDefaultCssItems>
-        <Nullable>enable</Nullable>
+ <ApplicationTitle>DragonbaneCharacterSheetGenerator</ApplicationTitle>
+ <ApplicationId>com.companyname.dragonbanecharactersheetgenerator</ApplicationId>
+ <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+ <ApplicationVersion>1</ApplicationVersion>
 
-        <!-- Display name -->
-        <ApplicationTitle>DragonbaneCharacterSheetGenerator</ApplicationTitle>
+ <WindowsPackageType>None</WindowsPackageType>
 
-        <!-- App Identifier -->
-        <ApplicationId>com.companyname.dragonbanecharactersheetgenerator</ApplicationId>
+ <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
+ <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
+ <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
+ <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
+ <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+ <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+ </PropertyGroup>
 
-        <!-- Versions -->
-        <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-        <ApplicationVersion>1</ApplicationVersion>
+ <!-- Set a safe absolute Android intermediate directory under the project to avoid malformed/invalid paths -->
+ <PropertyGroup>
+ <_AndroidIntermediateJavaClassDirectory>$(MSBuildProjectDirectory)\obj\$(Configuration)\net9.0-android\android\bin\classes</_AndroidIntermediateJavaClassDirectory>
+ </PropertyGroup>
 
-        <!-- To develop, package, and publish an app to the Microsoft Store, see: https://aka.ms/MauiTemplateUnpackaged -->
-        <WindowsPackageType>None</WindowsPackageType>
+ <!-- Ensure common Android intermediate directories exist before the Android build tasks run -->
+ <Target Name="EnsureAndroidJavaClassDirs" BeforeTargets="PrepareForBuild" Condition=" '$(TargetFramework)' == 'net9.0-android' Or '$(TargetFrameworks)'=='net9.0-android' Or '$(TargetFrameworks)' == '*net9.0-android*' ">
+ <MakeDir Directories="$(_AndroidIntermediateJavaClassDirectory)" />
+ <MakeDir Directories="$(MSBuildProjectDirectory)\obj\$(Configuration)\net9.0-android\android-arm64\android\bin\classes" />
+ <MakeDir Directories="$(MSBuildProjectDirectory)\obj\$(Configuration)\net9.0-android\android-x64\android\bin\classes" />
+ <Message Importance="High" Text="Created Android java class dirs: $(_AndroidIntermediateJavaClassDirectory)" />
+ </Target>
 
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
-        <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-    </PropertyGroup>
+ <ItemGroup>
+ <!-- App Icon -->
+ <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
-    <ItemGroup>
-        <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+ <!-- Splash Screen -->
+ <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
-        <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+ <!-- Images -->
+ <MauiImage Include="Resources\Images\*" />
+ <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
-        <!-- Images -->
-        <MauiImage Include="Resources\Images\*" />
-        <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
+ <!-- Custom Fonts -->
+ <MauiFont Include="Resources\Fonts\*" />
 
-        <!-- Custom Fonts -->
-        <MauiFont Include="Resources\Fonts\*" />
+ <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
+ <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+ </ItemGroup>
 
-        <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
-        <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
-    </ItemGroup>
+ <ItemGroup>
+ <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+ <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
+ <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
+ </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
-    </ItemGroup>
+ <ItemGroup>
+ <Content Update="wwwroot\doc\spells.json">
+ <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+ </Content>
+ </ItemGroup>
 
 </Project>
