Update UI and localization settings
- Replaced "About" link with a "Settings" button in `MainLayout.razor` for improved navigation.
- Updated `.sidebar` background gradient in `MainLayout.razor.css` to align with a new theme.
- Enhanced `NavMenu.razor` with specific Bootstrap icons for navigation links, improving visual clarity.
- Added CSS classes in `NavMenu.razor.css` for new SVG-based icon backgrounds.
- Set default language to `en-us` in `DragonbaneCharacterSheetGenerator.csproj` to ensure consistent localization.

--- a/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
+++ b/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
@@ -24,6 +24,7 @@
   <!-- Set a safe absolute Android intermediate directory under the project to avoid malformed/invalid paths -->
   <PropertyGroup>
     <_AndroidIntermediateJavaClassDirectory>$(MSBuildProjectDirectory)\obj\$(Configuration)\net10.0-android\android\bin\classes</_AndroidIntermediateJavaClassDirectory>
+    <DefaultLanguage>en-us</DefaultLanguage>
   </PropertyGroup>
   <!-- Ensure common Android intermediate directories exist before the Android build tasks run -->
   <Target Name="EnsureAndroidJavaClassDirs" BeforeTargets="PrepareForBuild" Condition=" '$(TargetFramework)' == 'net10.0-android' Or '$(TargetFrameworks)'=='net10.0-android' Or '$(TargetFrameworks)' == '*net10.0-android*' ">
