Update styles, Android config, and add editor settings
Updated the `.sidebar` gradient in `MainLayout.razor.css` for a new color scheme.
Configured `DragonbaneCharacterSheetGenerator.csproj` to use `apk` as the Android package format.
Added an `MsixPackage` profile to `launchSettings.json` for debugging.

Introduced a new `.editorconfig` file with detailed formatting rules, .NET coding style preferences, naming conventions, and ReSharper-specific settings to ensure consistent code quality and maintainability.

--- a/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
+++ b/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
@@ -26,6 +26,9 @@
     <_AndroidIntermediateJavaClassDirectory>$(MSBuildProjectDirectory)\obj\$(Configuration)\net10.0-android\android\bin\classes</_AndroidIntermediateJavaClassDirectory>
     <DefaultLanguage>en-us</DefaultLanguage>
   </PropertyGroup>
+  <PropertyGroup>
+      <AndroidPackageFormat>apk</AndroidPackageFormat>
+  </PropertyGroup>
   <!-- Ensure common Android intermediate directories exist before the Android build tasks run -->
   <Target Name="EnsureAndroidJavaClassDirs" BeforeTargets="PrepareForBuild" Condition=" '$(TargetFramework)' == 'net10.0-android' Or '$(TargetFrameworks)'=='net10.0-android' Or '$(TargetFrameworks)' == '*net10.0-android*' ">
     <MakeDir Directories="$(_AndroidIntermediateJavaClassDirectory)" />
