--- a/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
+++ b/DragonbaneCharacterSheetGenerator/DragonbaneCharacterSheetGenerator.csproj
@@ -38,7 +38,7 @@
   </Target>
   <ItemGroup>
     <!-- App Icon -->
-    <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+    <!-- App Icon is provided via platform-specific Assets in Platforms/ (raster/icons committed) -->
     <!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
     <!-- Images -->
